# laplaces-demon

./: GLOBAL.md  README.md  pyproject.toml
skills/termite/: SKILL.md
src/laplaces_demon/termite/: cli.py  core.py
