[project]
name = "laplaces-demon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "libtmux==0.53.1",
]

[project.scripts]
termite = "laplaces_demon.termite.cli:cli"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
